# zoolib_cxx

./: .gitignore  Config.xcconfig  Doxyfile  DoxygenMainPage.txt  LICENSE.txt  README.markdown
CMakeProjects/zoolib_Core/: CMakeLists.txt
CMakeProjects/zoolib_Platform_ARM/: CMakeLists.txt
CMakeProjects/zoolib_Platform_Apple/: CMakeLists.txt
CMakeProjects/zoolib_Platform_Hashing/: CMakeLists.txt
CMakeProjects/zoolib_Platform_JNI/: CMakeLists.txt
CMakeProjects/zoolib_Platform_MAME/: CMakeLists.txt
CMakeProjects/zoolib_Platform_OpenGL/: CMakeLists.txt
CMakeProjects/zoolib_Platform_POSIX/: CMakeLists.txt
CMakeProjects/zoolib_Platform_Pixels/: CMakeLists.txt
CMakeProjects/zoolib_Platform_SQLite/: CMakeLists.txt
CMakeProjects/zoolib_Platform_Zip/: CMakeLists.txt
CMakeProjects/zoolib_Platform_zlib/: CMakeLists.txt
CMakeProjects/zoolib_Portable/: CMakeLists.txt
CMakeProjects/zoolib_Project_Dataspace/: CMakeLists.txt
CMakeProjects/zoolib_Project_Expr/: CMakeLists.txt
CMakeProjects/zoolib_Project_GameEngine/: CMakeLists.txt
CMakeProjects/zoolib_Project_Pixels/: CMakeLists.txt
CMakeProjects/zoolib_Project_QueryEngine/: CMakeLists.txt
CMakeProjects/zoolib_Project_RelationalAlgebra/: CMakeLists.txt
CMakeProjects/zoolib_Project_Server/: CMakeLists.txt
CMakeProjects/zoolib_Project_ValPred/: CMakeLists.txt
Core/zoolib/: Any.cpp  Any.h  AnyBase.cpp  AnyBase.h  Any_T.h  Atomic.h  ByteSwap.cpp  ByteSwap.h  Callable.h  Callable_Macros.h  Chan.h  ChanAspect.h  ChanAspects.h  ChanClose.h  ChanCount.h  ChanPos.h  ChanR.h  ChanRPos_Bin.h  ChanRU_Bin.h  ChanRU_UTF.h  ChanR_Bin.h  ChanR_UTF.cpp  ChanR_UTF.h  ChanSize.h  ChanSizeSet.h  ChanU.h  ChanU_Bin.h  ChanU_UTF.h  ChanW.h  ChanW_Bin.h  ChanW_UTF.cpp  ChanW_UTF.h  Chan_Bin.h  Chan_UTF.h  Compare.cpp  Compare.h  Compare_T.h  Compat_MSVCStaticLib.h  Compat_NonCopyable.h  Compat_algorithm.h  (+99 more)
Core2/zoolib/: Chan.h  ChanR.h  ChanW.h  ChanW_Bin.h  Compare.cpp  Compat_MSVCStaticLib.h  Compat_algorithm.h  Compat_operator_bool.h  Compat_unordered_map.h  CountedVal.h  Deleter.h  Multi.h  Singleton.h  TagVal.h  Util_Chan.h  ZAtomic.cpp  ZCounted.h  ZDebug.cpp  ZQ.h  ZStdInt.h  ZThread.cpp  ZThread.h  ZThread_boost.cpp  ZTypes.cpp
Old/zoolib/: Yad.cpp  Yad.h  Yad_Any.cpp  Yad_Any.h  Yad_Val_T.h  ZBigRegion.cpp  ZBigRegion.h  ZBitStream.cpp  ZDCPixmap.cpp  ZDCPixmap.h  ZDCPixmapCoder.cpp  ZDCPixmapCoder.h  ZDCPixmapCoder_PNG.cpp  ZDCPixmapCoder_PNG.h  ZDCPixmapNS.cpp  ZDCPixmapNS.h  ZDCPixmap_CGImage.cpp  ZDCPixmap_CGImage.h  ZFile.cpp  ZGeomPOD.h  ZML.h  ZMap_Shared_T.h  ZNet_Local.cpp  ZNet_Local.h  ZNet_Local_Socket.cpp  ZNet_Local_Socket.h  ZServer.cpp  ZStream.cpp  ZStreamRPos_StreamR.cpp  ZStreamRWCon_MemoryPipe.cpp  ZStreamRWCon_SSL_Apple.cpp  ZStreamRWCon_SSL_OSX.h  ZStreamRW_FlushOnRead.cpp  ZStreamRW_FlushOnRead.h  ZStreamR_Boundary.cpp  ZStreamR_HexStrim.h  ZStreamR_SkipAllOnDestroy.cpp  ZStreamR_Source.cpp  ZStreamR_Source.h  ZStreamW_Fragmented.cpp  (+96 more)
Old_not_in_use/: YadSeqR_Iter.cpp  Yad_Any.cpp  Yad_Any.h  Yad_JSONB.cpp  ZYadFilter.cpp  ZYadFilter.h
Old_not_in_use/zoolib/: Starter_CarbonEvents.cpp  Starter_CarbonEvents.h  Yad_Zip.cpp  ZBitStream.cpp  ZBitStream.h  ZMain.cpp  ZNet_Local.cpp  ZNet_Local.h  ZNet_Local_Socket.cpp  ZNet_Local_Socket.h  ZStream.h  ZStreamRPos_StreamR.cpp  ZStreamRPos_StreamR.h  ZStreamRWCon_MemoryPipe.h  ZStreamRWCon_OpenSSL.cpp  ZStreamRWCon_OpenSSL.h  ZStreamRWCon_SSL_Apple.cpp  ZStreamRWCon_SSL_Apple.h  ZStreamRWCon_SSL_OSX.cpp  ZStreamRWCon_SSL_OSX.h  ZStreamRWPos_RAM.cpp  ZStreamRWPos_RAM.h  ZStreamRW_FIFO.cpp  ZStreamRW_FIFO.h  ZStreamRW_FlushOnRead.h  ZStreamR_Boundary.h  ZStreamR_JNI.cpp  ZStreamR_JNI.h  ZStreamR_Random.cpp  ZStreamR_Random.h  ZStreamR_Source.cpp  ZStreamR_Source.h  ZStreamW_Fragmented.h  ZStream_Buffered.cpp  ZStream_CGData.h  ZStream_CRLF.cpp  ZStream_Chunked.cpp  ZStream_Chunked.h  ZStream_Data_T.h  ZStream_Filter.h  (+63 more)
Portable/zoolib/: Accumulator_T.h  Any_Coerce.cpp  Any_Coerce.h  Archive.cpp  Archive.h  CallByStarter.h  Callable_Bind.h  Callable_Bookend.cpp  Callable_Bookend.h  Callable_Bool.cpp  Callable_Bool.h  Callable_Caller.h  Callable_Cast.h  Callable_Compound.h  Callable_Const.h  Callable_Delay.h  Callable_Fallback.h  Callable_Function.h  Callable_Indirect.h  Callable_Lambda.h  Callable_PMF.h  Callable_Set.h  Callable_Starter.h  Callable_StarterAsync.h  Callable_StarterSync.h  Cancellable.cpp  Cancellable.h  Cartesian.h  Cartesian_Matrix.h  ChanConnection_XX_FIFO.h  ChanConnection_XX_MemoryPipe.h  ChanFilter.h  ChanRPos_XX_ChanR.h  ChanRPos_XX_ChanRSize.h  ChanRPos_XX_PageBuffered.h  ChanRU_UTF_ML.cpp  ChanRU_UTF_ML.h  ChanRU_UTF_Std.cpp  ChanRU_UTF_Std.h  ChanRU_XX_Unreader.h  (+299 more)
ZooLib.xcodeproj/: project.pbxproj
ZooLibAndroid/: build.gradle
core/zoolib/: ByteSwap.cpp  ByteSwap.h  CallOnNewThread.h  Callable.h  Caller.h  Chan.h  ChanClose.h  ChanCountSet.h  ChanPos.h  ChanR.h  ChanR_Bin.h  ChanR_UTF.cpp  ChanR_UTF.h  ChanU.h  ChanU_UTF.h  ChanW.h  ChanW_Bin.h  ChanW_UTF.cpp  ChanW_UTF.h  Compare.cpp  Compare.h  Compare_T.h  Compat_NonCopyable.h  Compat_cmath.h  Compat_string.h  Compat_type_traits.h  CountedWithoutFinalize.cpp  DList.h  FunctionChain.h  Memory.cpp  Memory.h  Promise.h  Safe.h  StartOnNewThread.h  Starter.h  Stringf.cpp  Stringf.h  ThreadSafe.h  ThreadVal.h  Unicode.h  (+55 more)
default_config/: zconfig.h
docs/: Docs_CodePhilosophy.markdown  Docs_CodePhilosophy.txt  Docs_NamingConvention.markdown
zmake/: zmake.prefix  zmake.suffix
zoolib/: ByteSwap.cpp  ByteSwap.h  Chan.h  ChanBinR.h  ChanBinR_Stream.h  ChanClose.h  ChanCount.h  ChanCountSet.h  ChanGetLength.h  ChanPos.h  ChanPos_XX_Offset.h  ChanR.cpp  ChanR.h  ChanRBin.h  ChanRUTF.h  ChanR_Bin.h  ChanR_Bin_Stream.h  ChanR_ML.h  ChanR_UTF.cpp  ChanR_UTF.h  ChanR_UTF_More.h  ChanR_XX_Cat.h  ChanR_XX_More.h  ChanSetLength.h  ChanU.h  ChanUTFR.h  ChanW.h  ChanW_Bin.h  ChanW_UTF.cpp  ChanW_UTF.h  ChanW_UTF_More.cpp  ChanW_UTF_More.h  ChanW_XX_More.h  Chan_Bin_Stream.h  Chan_Channer.h  Chan_Offset.h  Chan_XX_Cat.h  Chan_XX_Data.h  Chan_XX_Limited.h  Chan_XX_Memory.h  (+1286 more)
(+2432 files in other folders)
