cmake_minimum_required(VERSION 3.4.1)

set(ZOOLIB_CXX ../..)

set(SourceDir ${ZOOLIB_CXX}/Portable/zoolib)

set (SourceFiles
	${SourceDir}/Archive.cpp
	${SourceDir}/Archive.h
	${SourceDir}/Callable_Bind.h
	${SourceDir}/Callable_Bookend.cpp
	${SourceDir}/Callable_Bookend.h
	${SourceDir}/Callable_Bool.cpp
	${SourceDir}/Callable_Bool.h
	${SourceDir}/Callable_Cast.h
	${SourceDir}/Callable_Compound.h
	${SourceDir}/Callable_Const.h
	${SourceDir}/Callable_Delay.h
	${SourceDir}/Callable_Fallback.h
	${SourceDir}/Callable_Function.h
	${SourceDir}/Callable_Indirect.h
	${SourceDir}/Callable_Lambda.h
	${SourceDir}/Callable_PMF.h
	${SourceDir}/Callable_Set.h
	${SourceDir}/Callable_StarterAsync.h
	${SourceDir}/Callable_StarterSync.h
	${SourceDir}/CallByStarter.h
	${SourceDir}/Cancellable.cpp
	${SourceDir}/Cancellable.h
	${SourceDir}/Cartesian_Matrix.h
	${SourceDir}/Cartesian.h
	${SourceDir}/Chan_Bin_ASCIIStrim.cpp
	${SourceDir}/Chan_Bin_ASCIIStrim.h
	${SourceDir}/Chan_Bin_Base64.cpp
	${SourceDir}/Chan_Bin_Base64.h
	${SourceDir}/Chan_Bin_Data.h
	${SourceDir}/Chan_Bin_FILE.cpp
	${SourceDir}/Chan_Bin_FILE.h
	${SourceDir}/Chan_Bin_string.cpp
	${SourceDir}/Chan_Bin_string.h
	${SourceDir}/Chan_Offset.h
	${SourceDir}/Chan_UTF_Chan_Bin.cpp
	${SourceDir}/Chan_UTF_Chan_Bin.h
	${SourceDir}/Chan_UTF_CRLF.cpp
	${SourceDir}/Chan_UTF_CRLF.h
	${SourceDir}/Chan_UTF_Escaped.cpp
	${SourceDir}/Chan_UTF_Escaped.h
	${SourceDir}/Chan_UTF_string.cpp
	${SourceDir}/Chan_UTF_string.h
	${SourceDir}/Chan_UTF_TextCoder.cpp
	${SourceDir}/Chan_UTF_TextCoder.h
	${SourceDir}/Chan_XX_Buffered.h
	${SourceDir}/Chan_XX_Cat.h
	${SourceDir}/Chan_XX_Count.h
	${SourceDir}/Chan_XX_FlushOnRead.h
	${SourceDir}/Chan_XX_Limited.h
	${SourceDir}/Chan_XX_Memory.h
	${SourceDir}/Chan_XX_PipePair.h
	${SourceDir}/Chan_XX_RateCapped.cpp
	${SourceDir}/Chan_XX_RateCapped.h
	${SourceDir}/Chan_XX_Tee.h
	${SourceDir}/ChanConnection_XX_FIFO.h
	${SourceDir}/ChanConnection_XX_MemoryPipe.h
	${SourceDir}/ChanFilter.h
	${SourceDir}/Channer_Bin.h
	${SourceDir}/Channer_UTF.h
	${SourceDir}/Channer_XX_Wrapper.h
	${SourceDir}/Channer.h
	${SourceDir}/ChanR_Bin_HexStrim.cpp
	${SourceDir}/ChanR_Bin_HexStrim.h
	${SourceDir}/ChanR_Bin_More.cpp
	${SourceDir}/ChanR_Bin_More.h
	${SourceDir}/ChanR_XX_AbortOnSlowRead.h
	${SourceDir}/ChanR_XX_Boundary.h
	${SourceDir}/ChanR_XX_SkipAllOnDestroy.h
	${SourceDir}/ChanR_XX_Terminated.h
	${SourceDir}/ChanRPos_XX_ChanR.h
	${SourceDir}/ChanRPos_XX_ChanRSize.h
	${SourceDir}/ChanRPos_XX_PageBuffered.h
	${SourceDir}/ChanRU_UTF_ML.cpp
	${SourceDir}/ChanRU_UTF_ML.h
	${SourceDir}/ChanRU_UTF_Std.cpp
	${SourceDir}/ChanRU_UTF_Std.h
	${SourceDir}/ChanRU_XX_Unreader.h
	${SourceDir}/ChanRWPos_XX_PageBuffered.h
	${SourceDir}/ChanRWPos_XX_RAM.h
	${SourceDir}/ChanW_Bin_HexStrim.cpp
	${SourceDir}/ChanW_Bin_HexStrim.h
	${SourceDir}/ChanW_Bin_More.cpp
	${SourceDir}/ChanW_Bin_More.h
	${SourceDir}/ChanW_UTF_InsertSeparator.cpp
	${SourceDir}/ChanW_UTF_InsertSeparator.h
	${SourceDir}/ChanW_UTF_ML.cpp
	${SourceDir}/ChanW_UTF_ML.h
	${SourceDir}/ChanW_XX_Fragmented.h
	${SourceDir}/Coerce_Any.cpp
	${SourceDir}/Coerce_Any.h
	${SourceDir}/Cog.h
	${SourceDir}/Compare_Cartesian.h
	${SourceDir}/Compare_Rational.cpp
	${SourceDir}/Compare_Rational.h
	${SourceDir}/Compare_string.cpp
	${SourceDir}/Compare_string.h
	${SourceDir}/Compare_vector.h
	${SourceDir}/Connection.h
	${SourceDir}/CountedString.h
	${SourceDir}/CountedStringUniquifier.h
	${SourceDir}/Data_ZZ.cpp
	${SourceDir}/Data_ZZ.h
	${SourceDir}/Factory_Fallback.h
	${SourceDir}/Factory_Race.h
	${SourceDir}/Factory_Retry.h
	${SourceDir}/Factory_WithFirstProduct.h
	${SourceDir}/Factory.h
	${SourceDir}/File.cpp
	${SourceDir}/File.h
	${SourceDir}/File_Archive.cpp
	${SourceDir}/File_Archive.h
	${SourceDir}/Generator.h
	${SourceDir}/Log.cpp
	${SourceDir}/Log.h
	${SourceDir}/Map_Shared_T.h
	${SourceDir}/Matrix.cpp
	${SourceDir}/Matrix.h
	${SourceDir}/MatrixArray.h
	${SourceDir}/ML.cpp
	${SourceDir}/ML.h
	${SourceDir}/Name.cpp
	${SourceDir}/Name.h
	${SourceDir}/NamePriv.cpp
	${SourceDir}/NameUniquifier.h
	${SourceDir}/Net_Internet.cpp
	${SourceDir}/Net_Internet.h
	${SourceDir}/Net_Local.cpp
	${SourceDir}/Net_Local.h
	${SourceDir}/Net.cpp
	${SourceDir}/Net.h
	${SourceDir}/PairwiseCombiner_T.h
	${SourceDir}/ParseException.h
	${SourceDir}/pdesc.h
	${SourceDir}/Pull_Attr.h
	${SourceDir}/Pull_Basic.cpp
	${SourceDir}/Pull_Basic.h
	${SourceDir}/Pull_Bencode.cpp
	${SourceDir}/Pull_Bencode.h
	${SourceDir}/Pull_bplist.cpp
	${SourceDir}/Pull_bplist.h
	${SourceDir}/Pull_ML.cpp
	${SourceDir}/Pull_ML.h
	${SourceDir}/Pull_SeparatedValues.cpp
	${SourceDir}/Pull_SeparatedValues.h
	${SourceDir}/Pull_XMLAttr.cpp
	${SourceDir}/Pull_XMLAttr.h
	${SourceDir}/PullPush_JSON.cpp
	${SourceDir}/PullPush_JSON.h
	${SourceDir}/PullPush_JSONB.cpp
	${SourceDir}/PullPush_JSONB.h
	${SourceDir}/PullPush_XMLPList.cpp
	${SourceDir}/PullPush_XMLPList.h
	${SourceDir}/PullPush_ZZ.cpp
	${SourceDir}/PullPush_ZZ.h
	${SourceDir}/PullPush.cpp
	${SourceDir}/PullPush.h
	${SourceDir}/Push_bplist.cpp
	${SourceDir}/Push_bplist.h
	${SourceDir}/PullTextOptions.h
	${SourceDir}/PushTextOptions.h
	${SourceDir}/SafePtrStack.h
	${SourceDir}/SafeSet.h
	${SourceDir}/Startable_SetName.cpp
	${SourceDir}/Startable_SetName.h
	${SourceDir}/Starter_EachOnNewThread.cpp
	${SourceDir}/Starter_EachOnNewThread.h
	${SourceDir}/Starter_EventLoopBase.cpp
	${SourceDir}/Starter_EventLoopBase.h
	${SourceDir}/Starter_ThreadLoop.cpp
	${SourceDir}/Starter_ThreadLoop.h
	${SourceDir}/StartOnNewThread.cpp
	${SourceDir}/StartOnNewThread.h
	${SourceDir}/StartScheduler.cpp
	${SourceDir}/StartScheduler.h
	${SourceDir}/StdIO.cpp
	${SourceDir}/StdIO.h
	${SourceDir}/TextCoder_Std.cpp
	${SourceDir}/TextCoder_Std.h
	${SourceDir}/TextCoder_Unicode.cpp
	${SourceDir}/TextCoder_Unicode.h
	${SourceDir}/TextCoder.cpp
	${SourceDir}/TextCoder.h
	${SourceDir}/TextCoderAliases.cpp
	${SourceDir}/TextCoderAliases.h
	${SourceDir}/Trail.cpp
	${SourceDir}/Trail.h
	${SourceDir}/Tween_Std.h
	${SourceDir}/Tween.h
	${SourceDir}/Uniquifier.h
	${SourceDir}/UniSet.h
	${SourceDir}/UTCDateTime.h
	${SourceDir}/Util_Chan_Bin_Operators.cpp
	${SourceDir}/Util_Chan_Bin_Operators.h
	${SourceDir}/Util_Chan_JSON.cpp
	${SourceDir}/Util_Chan_JSON.h
	${SourceDir}/Util_Chan_UTF_Matrix.h
	${SourceDir}/Util_Chan_UTF_MatrixArray.h
	${SourceDir}/Util_Chan_UTF_Operators_string.h
	${SourceDir}/Util_Chan_UTF_Operators.cpp
	${SourceDir}/Util_Chan_UTF_Operators.h
	${SourceDir}/Util_Chan_UTF.cpp
	${SourceDir}/Util_Chan_UTF.h
	${SourceDir}/Util_Channer.h
	${SourceDir}/Util_Debug.cpp
	${SourceDir}/Util_Debug.h
	${SourceDir}/Util_File.cpp
	${SourceDir}/Util_File.h
	${SourceDir}/Util_Strim_Cartesian.h
	${SourceDir}/Util_string.cpp
	${SourceDir}/Util_string.h
	${SourceDir}/Util_Time.cpp
	${SourceDir}/Util_Time.h
	${SourceDir}/Util_ZZ_JSON.cpp
	${SourceDir}/Util_ZZ_JSON.h
	${SourceDir}/Util_ZZ_JSONB.cpp
	${SourceDir}/Util_ZZ_JSONB.h
	${SourceDir}/Val_DB.h
	${SourceDir}/Val_T.h
	${SourceDir}/Val_ZZ.cpp
	${SourceDir}/Val_ZZ.h
	${SourceDir}/Visitor_Do_T.h
	${SourceDir}/Visitor_ToStrim.cpp
	${SourceDir}/Visitor_ToStrim.h
	${SourceDir}/Visitor.cpp
	${SourceDir}/Visitor.h
	)

source_group("" FILES ${SourceFiles})

# Also include Platform, so that Matrix.cpp can see the ARM-specific headers.
include_directories(${ZOOLIB_CXX} ${ZOOLIB_CXX}/Core ${ZOOLIB_CXX}/Portable ${ZOOLIB_CXX}/Platform)

add_library(ZooLib_Portable STATIC

	${SourceFiles}
	)
